# allsides_next

./: .gitignore  AURORA_MIGRATION_GUIDE.md  CLAUDE.md  JUNTO_EVIDENCE_DATA_MODELS.md  JUNTO_EVIDENCE_FRONTEND_DISPLAY.md  LOCAL_LLM_INTEGRATION.md  Langgraph Deep Research Integration  README.md  TODO.md  aurora_settings_patch.py  docker-compose.aurora.yml  docker-compose.yml  fix_summary.md  langgraph-open-research.md  main_v3_progress.md  main_v3_to_do.md  ollama_structured_example.py  package.json  test_ollama_integration.py  test_queries_patch.py  timeout_fix_summary.md
.cursor/: mcp.json
.serena/: project.yml
allsides_next/backend/: Dockerfile  README.md  RUN_PRODUCTION_TEST.md  TEST_MODE_2_POSITIONS.md  install_research_deps.sh  pyproject.toml  requirements.txt  reset_superusers.py
allsides_next/backend/api/: README.md  admin.py  db_utils.py  llm_client.py  llm_helpers.py  llm_queue.py  main_v3.py  middleware.py  models.py  renderers.py  serializers.py  settings.py  urls.py  views.py
allsides_next/backend/api/management/commands/: ensure_superuser.py
allsides_next/backend/api/migrations/: 0001_initial.py  0002_user_daily_query_count_user_last_query_reset.py  0003_query_is_active.py  0004_remove_query_results_query_response.py  0005_user_bias_rating_alter_user_email.py  0006_user_allstars_argumentrating.py  0007_alter_argumentrating_unique_together.py  0008_alter_argumentrating_unique_together_and_more.py  0009_alter_user_options_user_daily_query_limit_and_more.py  0009_thumbsrating.py  0010_add_stance_to_thumbsrating.py  0010_cachestatistics_alter_user_last_query_reset.py  0011_query_system_prompt.py  0011_update_user_query_reset.py  0012_argumentrating_argument_source.py  0013_user_reset_time_alter_argumentrating_argument_source_and_more.py  0014_alter_user_bias_rating.py  0015_merge_0009_thumbsrating_0014_alter_user_bias_rating.py  0016_merge_20250221_0710.py  0017_merge_20250221_0723.py  0018_researchreport_researchsection.py  0019_researchreport_thread_state.py  0020_researchreport_last_event_and_more.py
allsides_next/backend/api/research/: README.md  __init__.py  admin.py  graph_manager.py  middleware.py  models.py  serializers.py  urls.py  utils.py  views.py
allsides_next/backend/core/: admin.py  middleware.py  settings.py  urls.py  views.py
allsides_next/backend/templates/: sse_debug.html
allsides_next/backend/templates/admin/: base.html  login.html
(+50 files in other folders)
